`Tests`: Replace get(0) with getFirst() in DependencyServiceTest
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>